--- a/package.json
+++ b/package.json
@@ -31,19 +31,23 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.5",
+    "@babel/preset-env": "^7.18.2",
+    "@babel/preset-typescript": "^7.17.12",
+    "@types/jest": "^28.1.1",
     "@types/node": "^17.0.44",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.27.1",
     "@typescript-eslint/parser": "^5.27.1",
     "@vercel/ncc": "^0.34.0",
+    "babel-jest": "^28.1.1",
     "eslint": "^8.17.0",
     "eslint-plugin-github": "^4.3.6",
     "eslint-plugin-jest": "^26.5.3",
-    "jest": "^27.2.5",
+    "jest": "^28.1.1",
     "jest-junit": "^13.2.0",
     "js-yaml": "^4.1.0",
     "prettier": "2.7.0",
-    "ts-jest": "^27.1.2",
     "typescript": "^4.7.3"
   }
 }
