Use fetch-mock-jest to mock API calls

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "eslint": "^8.17.0",
     "eslint-plugin-github": "^4.3.6",
     "eslint-plugin-jest": "^26.5.3",
+    "fetch-mock-jest": "^1.5.1",
     "jest": "^28.1.1",
     "jest-junit": "^13.2.0",
     "js-yaml": "^4.1.0",
