Thread the if-files-not-found input through

--- a/action.yml
+++ b/action.yml
@@ -4,9 +4,21 @@ author: RWX
 inputs:
   artifacts:
     required: true
+  if-files-not-found:
+    required: false
+    default: warn
+    description: |
+      The behavior of the action when an artifact's file is not found.
+
+      Options:
+        - ignore: Output neither a warning nor an error; the action will succeed.
+        - warn (default): Output a warning; the action will succeed.
+        - error: Output an error; the action will fail.
   job-name:
     required: false
-    description: This is required if you set the `name` property on your job. If you provided a name, set that same value here.
+    description: >
+      This is required if you set the `name` property on your job.
+      If you provided a name, set that same value here.
   job-matrix:
     required: true
   vanguard-token:
