--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@actions/core": "1.10.0",
     "@actions/github": "5.1.1",
+    "fast-glob": "3.2.12",
     "node-fetch": "3.2.10",
     "uuid": "9.0.0"
   },
