--- a/action.yml
+++ b/action.yml
@@ -7,6 +7,17 @@ branding:
 inputs:
   artifacts:
     required: true
+    description: |
+      this is a json array of objects with fields...
+      - name: how the artifact will be shown in captain
+      - path: path to test result. This field supports bash globbing (e.g. **/*).
+      - kind: for now, this should always be "test_results"
+      - parser: one of
+        - cypress_junit_xml
+        - jest_json
+        - junit_xml
+        - rspec_json
+        - xunit_dot_net_xml
   if-files-not-found:
     required: false
     default: warn
@@ -23,9 +34,11 @@ inputs:
       This is required if you set the `name` property on your job.
       If you provided a name, set that same value here.
   job-matrix:
-    required: true
+    required: false
+
   captain-token:
     required: true
+
   captain-base-url:
     required: false
     default: https://captain.build
