run nix fmt in ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,3 +50,20 @@ jobs:
           job-matrix: "${{ toJSON(matrix) }}"
           captain-token: "${{ secrets.VANGUARD_STAGING_RWX_TOKEN }}"
           captain-base-url: "${{ secrets.VANGUARD_STAGING_BASE_URL }}"
+  nix_fmt:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: cachix/install-nix-action@v18
+      - run: nix fmt
+      - run: |
+          git_leftovers=$(git status --porcelain)
+          if [ -z $git_leftovers ]
+          then
+            echo "✅ nix fmt didn't change anything"
+          else
+            echo "❌ unformatted changes left behind"
+            git diff
+            git status --porcelain
+            exit 1
+          fi
