Minimal implementation to test out alpha test suite analysis
Apologies for the crude typescript. This is not meant to be merged
:sweat_smile:

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,22 +21,9 @@ jobs:
             git diff
             exit 1
           fi
-      - name: Upload artifacts to captain production
-        uses: ./
-        with:
-          artifacts: |
-            [
-              {
-                "name": "Jest JUnit",
-                "path": "./junit.xml",
-                "kind": "test_results",
-                "parser": "junit_xml"
-              }
-            ]
-          job-matrix: "${{ toJSON(matrix) }}"
-          captain-token: "${{ secrets.VANGUARD_PRODUCTION_RWX_TOKEN }}"
       - name: Upload artifacts to captain staging
         uses: ./
+        if: always()
         with:
           artifacts: |
             [
