--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,8 +33,8 @@ jobs:
                 "parser": "junit_xml"
               }
             ]
-          job-matrix: "${{ toJSON(matrix) }}"
-          captain-token: "${{ secrets.VANGUARD_PRODUCTION_RWX_TOKEN }}"
+          job-matrix: '${{ toJSON(matrix) }}'
+          captain-token: '${{ secrets.VANGUARD_PRODUCTION_RWX_TOKEN }}'
       - name: Upload artifacts to captain staging
         uses: ./
         with:
@@ -47,9 +47,9 @@ jobs:
                 "parser": "junit_xml"
               }
             ]
-          job-matrix: "${{ toJSON(matrix) }}"
-          captain-token: "${{ secrets.VANGUARD_STAGING_RWX_TOKEN }}"
-          captain-base-url: "${{ secrets.VANGUARD_STAGING_BASE_URL }}"
+          job-matrix: '${{ toJSON(matrix) }}'
+          captain-token: '${{ secrets.VANGUARD_STAGING_RWX_TOKEN }}'
+          captain-base-url: '${{ secrets.VANGUARD_STAGING_BASE_URL }}'
   nix_fmt:
     runs-on: ubuntu-latest
     steps:
