simplify nix linting

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,15 +55,4 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: cachix/install-nix-action@v18
-      - run: nix fmt
-      - run: |
-          git_leftovers=$(git status --porcelain)
-          if [ -z $git_leftovers ]
-          then
-            echo "✅ nix fmt didn't change anything"
-          else
-            echo "❌ unformatted changes left behind"
-            git diff
-            git status --porcelain
-            exit 1
-          fi
+      - run: nix fmt -- --check flake.nix
