--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,8 +33,8 @@ jobs:
                 "parser": "junit_xml"
               }
             ]
-          job-matrix: "${{ toJSON(matrix) }}"
-          captain-token: "${{ secrets.VANGUARD_PRODUCTION_RWX_TOKEN }}"
+          job-matrix: '${{ toJSON(matrix) }}'
+          captain-token: '${{ secrets.VANGUARD_PRODUCTION_RWX_TOKEN }}'
       - name: Upload artifacts to captain staging
         uses: ./
         with:
@@ -47,23 +47,12 @@ jobs:
                 "parser": "junit_xml"
               }
             ]
-          job-matrix: "${{ toJSON(matrix) }}"
-          captain-token: "${{ secrets.VANGUARD_STAGING_RWX_TOKEN }}"
-          captain-base-url: "${{ secrets.VANGUARD_STAGING_BASE_URL }}"
+          job-matrix: '${{ toJSON(matrix) }}'
+          captain-token: '${{ secrets.VANGUARD_STAGING_RWX_TOKEN }}'
+          captain-base-url: '${{ secrets.VANGUARD_STAGING_BASE_URL }}'
   nix_fmt:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: cachix/install-nix-action@v18
-      - run: nix fmt
-      - run: |
-          git_leftovers=$(git status --porcelain)
-          if [ -z $git_leftovers ]
-          then
-            echo "✅ nix fmt didn't change anything"
-          else
-            echo "❌ unformatted changes left behind"
-            git diff
-            git status --porcelain
-            exit 1
-          fi
+      - run: nix fmt -- --check flake.nix
