Switch secrets to match naming convention

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
               }
             ]
           job-matrix: '${{ toJSON(matrix) }}'
-          captain-token: '${{ secrets.VANGUARD_PRODUCTION_RWX_TOKEN }}'
+          captain-token: '${{ secrets.RWX_ACCESS_TOKEN }}'
       - name: Upload artifacts to captain staging
         uses: ./
         with:
@@ -48,7 +48,7 @@ jobs:
               }
             ]
           job-matrix: '${{ toJSON(matrix) }}'
-          captain-token: '${{ secrets.VANGUARD_STAGING_RWX_TOKEN }}'
+          captain-token: '${{ secrets.RWX_ACCESS_TOKEN_STAGING }}'
           captain-base-url: '${{ secrets.VANGUARD_STAGING_BASE_URL }}'
   nix_fmt:
     runs-on: ubuntu-latest
