--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
   "license": "MIT",
   "dependencies": {
     "@actions/core": "1.10.0",
+    "@actions/exec": "^1.1.1",
     "@actions/github": "5.1.1",
+    "@actions/tool-cache": "^2.0.1",
     "fast-glob": "3.2.12",
     "node-fetch": "3.3.0",
     "uuid": "9.0.0"
