--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,7 @@ jobs:
   test-and-lint:
     strategy:
       matrix:
-        job: [0, 1]
+        job: [0, "$GITHUB_JOB", "isn't it fun"]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
