--- a/package.json
+++ b/package.json
@@ -26,10 +26,9 @@
   "license": "MIT",
   "dependencies": {
     "@actions/core": "1.10.0",
+    "@actions/exec": "^1.1.1",
     "@actions/github": "5.1.1",
-    "fast-glob": "3.2.12",
-    "node-fetch": "3.3.0",
-    "uuid": "9.0.0"
+    "@actions/tool-cache": "^2.0.1"
   },
   "devDependencies": {
     "@babel/core": "7.20.2",
@@ -37,7 +36,6 @@
     "@babel/preset-typescript": "7.18.6",
     "@types/jest": "29.2.3",
     "@types/node": "18.11.9",
-    "@types/uuid": "8.3.4",
     "@typescript-eslint/eslint-plugin": "5.43.0",
     "@typescript-eslint/parser": "5.43.0",
     "@vercel/ncc": "0.34.0",
@@ -45,7 +43,6 @@
     "eslint": "8.28.0",
     "eslint-plugin-github": "4.4.1",
     "eslint-plugin-jest": "27.1.5",
-    "fetch-mock-jest": "1.5.1",
     "jest": "29.3.1",
     "jest-junit": "14.0.1",
     "js-yaml": "4.1.0",
