--- a/package.json
+++ b/package.json
@@ -43,9 +43,12 @@
     "eslint": "8.44.0",
     "eslint-plugin-github": "4.8.0",
     "eslint-plugin-jest": "27.2.2",
+    "eslint-plugin-prettier": "^5.0.0-alpha.2",
+    "install": "^0.13.0",
     "jest": "29.6.1",
     "jest-junit": "16.0.0",
     "js-yaml": "4.1.0",
+    "npm": "^9.8.0",
     "prettier": "3.0.0",
     "typescript": "5.1.6"
   }
