--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v3.8.2
         with:
-          node-version: 16.x
+          node-version-file: .node-version
       - name: Install dependencies
         run: npm ci
       - run: npm run all
