--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
   ],
   "author": "rwx",
   "license": "MIT",
+  "engines": {
+    "node": ">= 20"
+  },
   "dependencies": {
     "@actions/core": "1.10.1",
     "@actions/exec": "^1.1.1",
@@ -35,7 +38,7 @@
     "@babel/preset-env": "7.23.9",
     "@babel/preset-typescript": "7.23.3",
     "@types/jest": "29.5.12",
-    "@types/node": "18.19.18",
+    "@types/node": "20.11.26",
     "@typescript-eslint/eslint-plugin": "6.21.0",
     "@typescript-eslint/parser": "6.21.0",
     "@vercel/ncc": "0.38.1",
